gccida/g3/bitmap_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:975:63: error: must use 'enum' tag to refer to type 'bitmap_bits'
int  bitmap_operation( bitmap to, bitmap from1, bitmap from2, bitmap_bits operation) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1024:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1024:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1029:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1029:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1179:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1179:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1234:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)current, 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1235:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)p_next); 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1254:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)v33, 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1255:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
( __m128i)( unsigned __int64)current); 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1261:12: error: expected expression
*( _OWORD *)object_base = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1261:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)object_base = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1281:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/bitmap.c:1281:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_operation/src/obj/bitmap.o] Error 1
